- Added layout break at around 1/1 -- Navlist wrapping to new row and spacer offset adjustment - Added layout break for thin screens/phones -- Make nav items fill the whole screen -- Center nav elements on screen -- Make nav table into a list of the nav columns -- Place nav table directly under corresponding element -- Reorder split-view panes to split vertically instead -- Remove readability width limits -- Reflow previews grid to 2 columns (and to 1 col in another break) -- Reflow footer "grid" (flex) to be one giant column -- Remove horizontal paddings and margins - Adapt main stack elements to be sized based on font size of element (em) - Set main stack height to relative em instead of 'vh' in order to work with shallower screens - Set email subscribe input width to auto - Fixed 'gap-between-children' helper for vertical spacing - Wrap social bar icons if there is not enough space

--- a/controls/forms.scss
+++ b/controls/forms.scss
@@ -43,7 +43,7 @@ label {
 
 input[type=text], input[type=email] {
     //background-color: rgba(blue, 0.8);
-    width: 50%;
+    width: auto;
 }
 input[type=submit] {
     //background-color: rgba(green, 0.8);
