--- a/layouts/frame.scss
+++ b/layouts/frame.scss
@@ -22,11 +22,14 @@
     @extend %font-antialias;
     @extend %clean-container;
     width: 100%;
+    max-width: 100%;
     font-weight: vars.$base-font-weight;
     font-family: vars.$base-font-family;
     font-size: vars.$root-font-size;
     line-height: vars.$root-line-height;
     letter-spacing: vars.$base-letter-spacing;
+    //TODO enable for production
+    //overflow-x: hidden;
 }
 
 html, body {
